--- a/examples/basic-infra.deployment.yaml
+++ b/examples/basic-infra.deployment.yaml
@@ -22,6 +22,9 @@ spec:
       containers:
       - image: nginx:latest
         name: nginx
+        ports:
+        - hostIP: 127.0.0.1
+          protocol: TCP
         workingDir: /test-dir
 
 ---
@@ -49,5 +52,8 @@ spec:
       containers:
       - image: nginx:latest
         name: nginx
+        ports:
+        - hostIP: 127.0.0.1
+          protocol: TCP
         workingDir: /test-dir
 
