--- a/examples/basic-infra.deployment.yaml
+++ b/examples/basic-infra.deployment.yaml
@@ -25,6 +25,13 @@ spec:
         ports:
         - hostIP: 127.0.0.1
           protocol: TCP
+        resources:
+          limits:
+            cpu: 1000m
+            memory: 2000Mi
+          requests:
+            cpu: 500m
+            memory: 256Mi
         workingDir: /test-dir
 
 ---
@@ -55,5 +62,12 @@ spec:
         ports:
         - hostIP: 127.0.0.1
           protocol: TCP
+        resources:
+          limits:
+            cpu: 1000m
+            memory: 2000Mi
+          requests:
+            cpu: 500m
+            memory: 256Mi
         workingDir: /test-dir
 
