--- a/examples/basic-infra.deployment.yaml
+++ b/examples/basic-infra.deployment.yaml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-service
+  namespace: default
+spec:
+  ports:
+  - port: 80
+    protocol: TCP
+    targetPort: 9376
+  type: ClusterIP
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
