--- a/src/Starboard/Starboard.fsproj
+++ b/src/Starboard/Starboard.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="Serializer.fs" />
     <Compile Include="Common.fs" />
     <Compile Include="Pods.fs" />
+    <Compile Include="Service.fs" />
     <Compile Include="Deployments.fs" />
     <Compile Include="K8s.fs" />
   </ItemGroup>
