--- a/examples/basic-infra.deployment.yaml
+++ b/examples/basic-infra.deployment.yaml
@@ -1,4 +1,16 @@
 apiVersion: v1
+data:
+  allowed: true
+  enemies: aliens
+  lives: 3
+immutable: false
+kind: ConfigMap
+metadata:
+  name: test-config-map
+  namespace: default
+
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: my-service
@@ -46,12 +58,20 @@ spec:
             cpu: 500m
             memory: 256Mi
         volumeMounts:
-        - mountPath: /bin
-          name: test-vmount
+        - mountPath: /etc/config
+          name: config-vol
           readOnly: true
           subPath: ''
           subPathExpr: ''
         workingDir: /test-dir
+      volumes:
+      - configMap:
+          name: log-config
+          optional: false
+          items:
+          - key: log_level
+            path: log_level.conf
+        name: config-vol
 
 ---
 apiVersion: apps/v1
@@ -89,10 +109,18 @@ spec:
             cpu: 500m
             memory: 256Mi
         volumeMounts:
-        - mountPath: /bin
-          name: test-vmount
+        - mountPath: /etc/config
+          name: config-vol
           readOnly: true
           subPath: ''
           subPathExpr: ''
         workingDir: /test-dir
+      volumes:
+      - configMap:
+          name: log-config
+          optional: false
+          items:
+          - key: log_level
+            path: log_level.conf
+        name: config-vol
 
