--- a/src/Starboard/Starboard.fsproj
+++ b/src/Starboard/Starboard.fsproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <Compile Include="Serializer.fs" />
     <Compile Include="Common.fs" />
+    <Compile Include="Volumes.fs" />
+    <Compile Include="ConfigMap.fs" />
     <Compile Include="Pods.fs" />
     <Compile Include="Service.fs" />
     <Compile Include="Deployments.fs" />
