--- a/src/Starboard/Starboard.fsproj
+++ b/src/Starboard/Starboard.fsproj
@@ -12,6 +12,7 @@
     <Compile Include="ConfigMap.fs" />
     <Compile Include="PersistentVolume.fs" />
     <Compile Include="Pods.fs" />
+    <Compile Include="Ingress.fs" />
     <Compile Include="Service.fs" />
     <Compile Include="Deployments.fs" />
     <Compile Include="K8s.fs" />
