Ingress with validation

--- a/tests/Starboard.Building.Tests/Starboard.Building.Tests.fsproj
+++ b/tests/Starboard.Building.Tests/Starboard.Building.Tests.fsproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Compile Include="DeploymentTests.fs" />
+    <Compile Include="ValidationTests.fs" />
     <Compile Include="PodTests.fs" />
     <Compile Include="ContainerTests.fs" />
     <Compile Include="Program.fs" />
