--- a/src/Starboard/Starboard.fsproj
+++ b/src/Starboard/Starboard.fsproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Helpers.fs" />
+    <Compile Include="Validation.fs" />
     <Compile Include="Serializer.fs" />
     <Compile Include="Common.fs" />
     <Compile Include="Volumes.fs" />
