--- a/tests/Starboard.Acceptance.Tests/Starboard.Acceptance.Tests.fsproj
+++ b/tests/Starboard.Acceptance.Tests/Starboard.Acceptance.Tests.fsproj
@@ -8,7 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Compile Include="IngressTests.fs" />
+		<Compile Include="DeploymentResourceTests.fs" />
+		<Compile Include="IngressResourceTests.fs" />
 		<Compile Include="K8sTests.fs" />
 	</ItemGroup>
 
