--- a/tests/Starboard.Acceptance.Tests/Starboard.Acceptance.Tests.fsproj
+++ b/tests/Starboard.Acceptance.Tests/Starboard.Acceptance.Tests.fsproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 		<Compile Include="DeploymentResourceTests.fs" />
+		<Compile Include="SecretTests.fs" />
 		<Compile Include="IngressResourceTests.fs" />
 		<Compile Include="K8sTests.fs" />
 	</ItemGroup>
