--- a/tests/Starboard.Acceptance.Tests/Starboard.Acceptance.Tests.fsproj
+++ b/tests/Starboard.Acceptance.Tests/Starboard.Acceptance.Tests.fsproj
@@ -8,9 +8,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Compile Include="DeploymentResourceTests.fs" />
+		<Compile Include="DeploymentTests.fs" />
 		<Compile Include="SecretTests.fs" />
-		<Compile Include="IngressResourceTests.fs" />
+		<Compile Include="IngressTests.fs" />
 		<Compile Include="K8sTests.fs" />
 	</ItemGroup>
 
