Adds ServiceAccount and ClusterRoleBinding

--- a/tests/Starboard.Acceptance.Tests/Starboard.Acceptance.Tests.fsproj
+++ b/tests/Starboard.Acceptance.Tests/Starboard.Acceptance.Tests.fsproj
@@ -8,6 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<Compile Include="ServiceAccountTests.fs" />
+		<Compile Include="ClusterRoleBindingTests.fs" />
 		<Compile Include="SecretTests.fs" />
 		<Compile Include="ConfigMapTests.fs" />
 		<Compile Include="PodTests.fs" />
