--- a/src/Starboard/Starboard.fsproj
+++ b/src/Starboard/Starboard.fsproj
@@ -12,6 +12,8 @@
     <Compile Include="Common.fs" />
     <Compile Include="ConfigMap.fs" />
     <Compile Include="Secret.fs" />
+    <Compile Include="Authentication.fs" />
+    <Compile Include="Authorization.fs" />
     <Compile Include="Volumes.fs" />
     <Compile Include="PersistentVolume.fs" />
     <Compile Include="Pods.fs" />
