--- a/tests/Starboard.Building.Tests/Starboard.Building.Tests.fsproj
+++ b/tests/Starboard.Building.Tests/Starboard.Building.Tests.fsproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="ServiceAccountTests.fs" />
+    <Compile Include="ClusterRoleBindingTests.fs" />
     <Compile Include="DeploymentTests.fs" />
     <Compile Include="ValidationTests.fs" />
     <Compile Include="PodTests.fs" />
@@ -17,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="Unquote" Version="6.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
