Service selector and other small fixes

--- a/tests/Starboard.Building.Tests/Starboard.Building.Tests.fsproj
+++ b/tests/Starboard.Building.Tests/Starboard.Building.Tests.fsproj
@@ -5,6 +5,7 @@
     <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ServiceTests.fs" />
     <Compile Include="ServiceAccountTests.fs" />
     <Compile Include="ClusterRoleBindingTests.fs" />
     <Compile Include="DeploymentTests.fs" />
