--- a/tests/Starboard.Building.Tests/Starboard.Building.Tests.fsproj
+++ b/tests/Starboard.Building.Tests/Starboard.Building.Tests.fsproj
@@ -1,22 +1,20 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
     <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
-
   <ItemGroup>
+    <Compile Include="ServiceTests.fs" />
     <Compile Include="ServiceAccountTests.fs" />
     <Compile Include="ClusterRoleBindingTests.fs" />
     <Compile Include="DeploymentTests.fs" />
     <Compile Include="ValidationTests.fs" />
     <Compile Include="PodTests.fs" />
     <Compile Include="ContainerTests.fs" />
+    <Compile Include="K8sTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="Unquote" Version="6.1.0" />
@@ -30,9 +28,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\src\Starboard\Starboard.fsproj" />
   </ItemGroup>
-
 </Project>
