Build and test GH action
Add manual dispatch

Fix env var on build actions

Docs publish action

Remove install tool step

Install tool with restore

Correct doc build command

Try Debug build for docs

Adds Nuget release action

Adds version and license link

Adds release notes

README in fsproj

Fix readme path in fsproj

Include readme in nuget

--- a/src/Starboard/Starboard.fsproj
+++ b/src/Starboard/Starboard.fsproj
@@ -4,12 +4,19 @@
 		<PackageId>Starboard</PackageId>
 		<TargetFramework>net6.0</TargetFramework>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<FsDocsLicenseLink>https://github.com/dburriss/Starboard/License</FsDocsLicenseLink>
 		<RepositoryUrl>https://github.com/dburriss/Starboard</RepositoryUrl>
 		<Description>Starboard is a declaritive library over Kubernetes resources that allows you to use the power of F# to define your configuration.</Description>
 		<Authors>Devon Burriss</Authors>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<Copyright>Devon Burriss</Copyright>
+		<Version>0.0.1</Version>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="..\..\README.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
 
 	<ItemGroup>
 		<Compile Include="Helpers.fs" />
