--- a/src/Overboard/Overboard.fsproj
+++ b/src/Overboard/Overboard.fsproj
@@ -17,7 +17,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include="..\..\README.md" Pack="true" PackagePath="\"/>
+		<None Include="..\..\README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -39,7 +39,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="YamlDotNet" Version="12.0.0" />
+		<PackageReference Include="YamlDotNet" Version="12.0.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="FSharp.Core" Version="7.0.0" />
 	</ItemGroup>
 
 </Project>
