Adds Job resource

--- a/src/Overboard/Overboard.fsproj
+++ b/src/Overboard/Overboard.fsproj
@@ -33,6 +33,7 @@
 		<Compile Include="Volumes.fs" />
 		<Compile Include="PersistentVolume.fs" />
 		<Compile Include="Pods.fs" />
+		<Compile Include="Job.fs" />
 		<Compile Include="Deployments.fs" />
 		<Compile Include="Service.fs" />
 		<Compile Include="Ingress.fs" />
