--- a/src/Overboard/Overboard.fsproj
+++ b/src/Overboard/Overboard.fsproj
@@ -34,6 +34,7 @@
 		<Compile Include="PersistentVolume.fs" />
 		<Compile Include="Pods.fs" />
 		<Compile Include="Job.fs" />
+		<Compile Include="CronJob.fs" />
 		<Compile Include="Deployments.fs" />
 		<Compile Include="Service.fs" />
 		<Compile Include="Ingress.fs" />
