--- a/tests/Overboard.Acceptance.Tests/Overboard.Acceptance.Tests.fsproj
+++ b/tests/Overboard.Acceptance.Tests/Overboard.Acceptance.Tests.fsproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<Compile Include="CronJobTests.fs" />
 		<Compile Include="JobTests.fs" />
 		<Compile Include="NamespaceTests.fs" />
 		<Compile Include="ServiceAccountTests.fs" />
